add readme file and fix footer

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     <div id="online"></div>
 </section>
 <footer>
-    Created by <a href="mailto:padampasam@gmail.com">Peter Adam</a> with ❤. Feel free to <a href="https://github.io">contribute</a>.
-    <a href="mailto:padampasam@gmail.com">Peter Adam</a>
+    Created by <a href="mailto:padampasam@gmail.com">Peter Adam</a> with ❤️. Feel free to <a href="https://github.com/pitkes22/antik-status">contribute</a>.
 </footer>
 </body>
 <script src="script.js"></script>
