--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Je Antik dole?</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" href="fav.png">
+    <meta name="description" content="Neoficiálna stránka na zistenie aktuálnej dostupnosti internetu v sieti Antik Telecom.">
+    <meta name="keywords" content="antik, internet, dostupnost, dole, ide, funguje, status, antik-status">
 </head>
 <body>
 <section id="home">
