Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="shortcut icon" href="fav.png">
     <meta name="description" content="Neoficiálna stránka na zistenie aktuálnej dostupnosti internetu v sieti Antik Telecom.">
     <meta name="keywords" content="antik, internet, dostupnost, dole, ide, funguje, status, antik-status">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138587185-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-138587185-1');
+    </script>
+
 </head>
 <body>
 <section id="home">
