--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <p>Všetky dáta na tejto stránke pochádzajú z <a href="http://nat-88-212-48-10.antik.sk/monitoring/">verejného API</a> na monitorovacom serveri Antiku. Táto stránka nieje oficiálnym produktom <a href="https://www.antik.sk/">ANTIK Telecom</a> a všetky dáta sú čisto informačné a poskytované bez akejkoľvek záruky.</p>
 
     <h2>Podľa čoho sa určuje "Či je antík dole?"</h2>
-    <p>Podľa percentuálnej časti switchov, ktoré sú OFFLINE menej ako 1 mesiac. Za to, že je antik dole sa považuje ak je OFFLINE viac ako <strong>20%</strong> switchov. Ak je ONLINE viac, ako <strong>95%</strong> switchov považuje sa za nie je dole. Inak je Antik možno dole.</p>
+    <p>Podľa percentuálnej časti switchov, ktoré sú OFFLINE menej ako 1 mesiac. Antik sa považuje, že je dole ak je OFFLINE viac ako <strong>50%</strong> switchov. Ak je ONLINE viac, ako <strong>95%</strong> switchov považuje sa, že nie je dole. Inak je Antik možno dole.</p>
 
     <h2>Cieľ stránky</h2>
-    <p>Cieľom tejto stránky je umožniť klientom antiku zistiť či je v prípade nedostupnosti internetu problém na ich strane alebo na strane antiku. Vzhľadom na to, že týmto spôsobom sa šetri čas ľudí na podpore Antiku nemuseli by to chlapci z antiku zablokovať ❤️</p>
+    <p>Cieľom tejto stránky je umožniť klientom Antiku zistiť či je v prípade nedostupnosti internetu problém na ich strane alebo na strane Antiku. Vzhľadom na to, že týmto spôsobom sa šetri čas ľudí na podpore Antiku nemuseli by to chlapci z Antiku zablokovať ❤️</p>
 
     <h2>Ako zistím, ktorý switch patri k mojej prípojke</h2>
-    <p>Približne sa to dá určiť podľa <strong>hostnamu</strong> konretne z časti medzi pomlčkami. Ta predstavuje skratku názvu ulice a číslo domu. Napríklad pri hostname
+    <p>Približne sa to dá určiť podľa <strong>hostnamu</strong> konkrétne z časti medzi pomlčkami. Ta predstavuje skratku názvu ulice a číslo domu. Napríklad pri hostname
         <i>tv-<b>kom19</b>-sw01</i>je <b>kom19</b> skratka pre <strong>komenského 19</strong></p>
 
     <h2>Čo znamenajú dáta v tabuľkách</h2>
@@ -48,7 +48,7 @@
         ❌ - Switch je nedostupný,
         💀 - Switch je dlhodobo nedostupný<br>
         <strong>Hostname</strong>: Názov daného switchu. Pozostáva z niečoho, skratky ulice a čísla domu, typu zariadenia a jeho ID na danej prípojke.<br>
-        <strong>IP</strong>: Interná IP adresa zariadenia na sieti antiku.<br>
+        <strong>IP</strong>: Interná IP adresa zariadenia na sieti Antiku.<br>
         <strong>Čas</strong>: Čas od kedy je zariadenie offline alebo kedy bolo naposledy skontrolovane online.<br>
     </p>
 </section>
