--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="fav.png">
     <meta name="description" content="Neoficiálna stránka na zistenie aktuálnej dostupnosti internetu v sieti Antik Telecom.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="antik, internet, dostupnost, dole, ide, funguje, status, antik-status">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138587185-1"></script>
